Added .gitlab-ci.yml, .pre-commit-config.yaml and changelog

--- a/project/README.md.jinja
+++ b/project/README.md.jinja
@@ -12,6 +12,7 @@
 
 Just run:
 
+    git-changelog --output CHANGELOG.md --in-place --version-regex '<a href="[^"]+">(?P<version>[^<]+)' --marker-line '<!-- new entries will be injected here -->'
     pdm doc
 
 This will create the doc in build/htmldoc
