--- a/project/tests/test_init.py.jinja
+++ b/project/tests/test_init.py.jinja
@@ -6,5 +6,6 @@ def test_get_version():
     ver = get_{{python_package_import_name}}_version()
     assert ver.startswith("0.1")
 
-if __name__ == '__main__':
+
+if __name__ == "__main__":
     test_get_version()
