--- a/project/tests/test_fibonacci.py.jinja
+++ b/project/tests/test_fibonacci.py.jinja
@@ -14,6 +14,6 @@ def test_fibonacci():
         a = a + tmp
         assert a == fibonacci(n)
 
-if __name__ == '__main__':
+
+if __name__ == "__main__":
     test_fibonacci()
-    
