Added python version

--- a/project/README.md.jinja
+++ b/project/README.md.jinja
@@ -1,6 +1,6 @@
 [![pdm-managed](https://img.shields.io/badge/pdm-managed-blueviolet)](https://pdm.fming.dev)
 [![Code style: black](https://img.shields.io/badge/code%20style-black-000000.svg)](https://github.com/psf/black)
-![Python](https://img.shields.io/badge/python-3.8%7C3.9%7C3.10-green)
+![Python](https://img.shields.io/badge/python-{{min_python_version}}-green)
 ![Doc](build/htmldoc/doc_badge.svg)
 ![Coverage](build/htmldoc/cov_badge.svg)
 
