--- a/project/.gitlab-ci.yml.jinja
+++ b/project/.gitlab-ci.yml.jinja
@@ -1,4 +1,4 @@
-image: ubuntu:22.04
+image: python:{{min_python_version}}-bullseye
 
 stages:
   - test
@@ -12,7 +12,8 @@ variables:
 test:
   stage: test
   script:
-    - apt-get update --allow-releaseinfo-change && apt-get install -yqq --no-install-recommends python3-venv python3-dev python3-pip graphviz libblas-dev liblapack-dev cmake gfortran gcc g++ make curl
+    - apt-get update --allow-releaseinfo-change
+    - apt-get install -yqq --no-install-recommends graphviz cmake gfortran gcc g++ make curl
     - python3 --version
     - pip3 install pdm
     - echo ${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"}
