--- a/project/{{python_package_import_name}}/__init__.py.jinja
+++ b/project/{{python_package_import_name}}/__init__.py.jinja
@@ -15,6 +15,8 @@ To run tests, just run:
 
 [See test report](../tests/report.html)
 
+{% if use_pytest_mpl %}[See test results](../tests/results/fig_comparison.html){% endif %}
+
 [See coverage](../coverage/index.html)
 
 .. include:: ../CHANGELOG.md
