--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -13,7 +13,7 @@ dependencies = [
     "rich>=13.3",
     "setuptools-scm>=7.1",
 ]
-requires-python = ">{{min_python_version}}"
+requires-python = ">={{min_python_version}}"
 
 [project.urls]
 "Bug Tracker" = "https://{{ repository_provider }}/{{ repository_namespace }}/{{ repository_namespace }}/issues"
