--- a/project/.gitlab-ci.yml.jinja
+++ b/project/.gitlab-ci.yml.jinja
@@ -15,11 +15,12 @@ test:
     - apt-get update --allow-releaseinfo-change
     - apt-get install -yqq --no-install-recommends graphviz cmake gfortran gcc g++ make curl
     - python3 --version
-    - pip3 install pdm
-    - echo ${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"}
-    - PDM_BUILD_SCM_VERSION=${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"} pdm install
-    - PDM_BUILD_SCM_VERSION=${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"} pdm run pytest
-    - PDM_BUILD_SCM_VERSION=${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"} pdm doc
+    - curl -sSL https://raw.githubusercontent.com/pdm-project/pdm/main/install-pdm.py | python3 -
+    - export PATH=/root/.local/bin:$PATH
+    - pdm install
+    - pdm build
+    - pdm run pytest
+    - pdm doc
   artifacts:
     when: always
     paths:
@@ -30,8 +31,11 @@ pages:
   stage: deploy
   dependencies:
   - test
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v(?:\d+.){2}(?:\d+)$/
+      when: always
   script:
-    - cp -r build/htmldoc public
+    - cp -r htmldoc public
   artifacts:
     paths:
       - public
@@ -41,13 +45,13 @@ package:
   dependencies:
   - test
   script:
-    - apt-get update --allow-releaseinfo-change && apt-get install -yqq --no-install-recommends python3-pip
-    - pip3 install pdm
-    - pdm config --global repository.gitlab.url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi
-    - pdm config --global repository.gitlab.username gitlab-ci-token
-    - pdm config --global repository.gitlab.password ${CI_JOB_TOKEN}
-    - PDM_BUILD_SCM_VERSION=${CI_COMMIT_TAG:-"0.0.0.dev+$CI_COMMIT_SHORT_SHA"} pdm build
-    - pdm publish -r gitlab
-  only:
-    - tags
-    - master
+    - apt-get update --allow-releaseinfo-change
+    - apt-get install -yqq --no-install-recommends git python3-venv curl
+    - curl -sSL https://raw.githubusercontent.com/pdm-project/pdm/main/install-pdm.py | python3 -
+    - export PATH=/root/.local/bin:$PATH
+    - pdm config --global repository.pypi.url https://upload.pypi.org/legacy/
+    - pdm config --global repository.pypi.username __token__
+    - pdm config --global repository.pypi.password ${PYPI_TOKEN}
+    - pdm config
+    - pdm publish
+
