--- a/project/pdm_build.py.jinja
+++ b/project/pdm_build.py.jinja
@@ -6,8 +6,8 @@ def pdm_build_update_setup_kwargs(context: Context, setup_kwargs: dict):
     if context.target != "sdist":
         ext_modules = [
             Pybind11Extension(
-                # "talismans.hello",
-                # ["src/talismans/hellomodule.cpp", "src/talismans/example.cpp"],
+                "{{python_package_import_name}}.hello",
+                ["src/{{python_package_import_name}}/hellomodule.cpp", "src/{{python_package_import_name}}/example.cpp"],
             )
         ]
         setup_kwargs.update(
