--- a/project/src/{{python_package_import_name}}/__init__.py.jinja
+++ b/project/src/{{python_package_import_name}}/__init__.py.jinja
@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 """
 
-.. include:: ../README.md
+.. include:: ../../README.md
 
 # Testing
 
@@ -19,7 +19,7 @@ To run tests, just run:
 
 [See coverage](../coverage/index.html)
 
-.. include:: ../CHANGELOG.md
+.. include:: ../../CHANGELOG.md
 
 """
 import os
