--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -19,6 +19,7 @@ authors = [
 dependencies = [
     "rich>=13.3",
     "setuptools-scm>=7.1",
+    "numpy>=1.24.3",
 ]
 requires-python = ">={{min_python_version}}"
 readme = "README.md"
@@ -129,7 +130,7 @@ doc.shell = """\
     mkdir -p htmldoc/{{python_package_import_name}}
     pdoc --html --force --config latex_math=True -o htmldoc {{python_package_import_name}}
     coverage html -d htmldoc/coverage --rcfile tests/coverage.conf
-    docstr-coverage {{python_package_import_name}} -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/{{python_package_import_name}}/doc_badge.svg
+    docstr-coverage src/{{python_package_import_name}} -miP -sp -is -idel --skip-file-doc --exclude ".*/kt.*.py" --badge=htmldoc/{{python_package_import_name}}/doc_badge.svg
     coverage-badge -f -o htmldoc/{{python_package_import_name}}/cov_badge.svg
 """
 {% if use_pytest_mpl %}baseline.shell = "pytest --mpl-generate-path=tests/baseline tests"{% endif %}
