--- a/project/tests/test_extension.py.jinja
+++ b/project/tests/test_extension.py.jinja
@@ -1,4 +1,4 @@
-def test_c_add():
+{% if use_c_extension %}def test_c_add():
     from {{python_package_import_name}}.hello import add
 
     assert add(2, 3) == 5
@@ -27,7 +27,7 @@ def test_c_class():
 
     b.process()
     assert b.getResult() == 1
-
+{% endif %}
 
 def test_py():
     from {{python_package_import_name}}.compute import python_add
@@ -36,7 +36,9 @@ def test_py():
 
 
 if __name__ == "__main__":
+{% if use_c_extension %}
     test_c_add()
     test_c_norm()
-    test_py()
     test_c_class()
+{% endif %}
+    test_py()
