Renamed conditional files

--- a/project/pyproject.toml.jinja
+++ b/project/pyproject.toml.jinja
@@ -1,13 +1,11 @@
 [build-system]
 requires = [
     "pdm-backend>=2.1.0,<3.0.0",
-{% if use_c_extension %}
-    "setuptools>=67.0.0,<69.0.0",
+{% if use_c_extension %}    "setuptools>=67.0.0,<69.0.0",
     "pybind11>=2.10.4,<3.0.0",
     "nuitka",
     "wheel",
-    "toml",
-{% endif %}
+    "toml",{% endif %}
 ]
 build-backend = "pdm.backend"
 
