--- a/project/tests/test_extension.py.jinja
+++ b/project/tests/test_extension.py.jinja
@@ -36,9 +36,7 @@ def test_py():
 
 
 if __name__ == "__main__":
-{% if use_c_extension %}
-    test_c_add()
+{% if use_c_extension %}    test_c_add()
     test_c_norm()
-    test_c_class()
-{% endif %}
+    test_c_class(){% endif %}
     test_py()
